--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,4 +10,8 @@
 body{
     font-size: 1.6rem;
     font-family: 'Secular One', sans-serif;
+    min-height: 100%;
+}
+#root, .App{
+    min-height: 100%;
 }
