--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,6 +15,10 @@ body{
 #root, .App{
     min-height: 100%;
 }
-.page-item span{
+.page-item button{
     font-size: 16px;
+    cursor: pointer;
 }
+
+
+  
